--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
+    "accounting": "^0.4.1",
     "axios": "^0.15.3",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
