--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "manifest-dance",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://jwade21.github.io/manifest-dance",
   "devDependencies": {
+    "gh-pages": "^0.12.0",
     "react-scripts": "0.7.0"
   },
   "dependencies": {
@@ -18,6 +20,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   }
 }
